added cic as database name

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,6 +1,6 @@
 <h1>{{appTitle}} 🚀</h1>
 <div class="container">
-  <form id="requestForm" action="/send-request" method="post" enctype="multipart/form-data">
+  <form id="requestForm" action="/send-request" method="post">
     <div class="mb-3">
       <label for="title" class="form-label">Titre</label>
       <input type="text" class="form-control" id="title" name="title" required>
