--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -14,5 +14,10 @@ h1 {
 
 .container{
   max-width: 750px;
-  padding: 50px;
+  padding: 50px 0;
+}
+
+#errorMessage{
+  color:red;
+  font-size: large;
 }
