first fonctional version of web form

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -12,6 +12,7 @@
       <label for="type" class="form-label">Type</label>
       <select class="form-select" id="type" name="type" required>
         <option value="">Select a type</option>
+        <option value="Télétravail">Télétravail</option>
         <option value="Congés payés">Congés payés</option>
         <option value="RTT">RTT</option>
         <option value="Congés Mariage">Congés Mariage</option>
@@ -56,8 +57,8 @@
     </div>
 
     <div class="mb-3">
-      <label for="requester" class="form-label">Demandeur</label>
-      <input type="text" class="form-control" id="requester" name="requester" placeholder="Prénom Nom" required>
+      <label for="requestor" class="form-label">Demandeur</label>
+      <input type="text" class="form-control" id="requestor" name="requestor" placeholder="Prénom Nom" required>
     </div>
     <div class="mb-3">
       <label for="sub" class="form-label">Remplaçant</label>
